--- a/fund_t+1_cash_flow_prediction_documentation.html
+++ b/fund_t+1_cash_flow_prediction_documentation.html
@@ -11804,9 +11804,9 @@ div#notebook {
 $
 \begin{bmatrix} 
 y_{1} & = & \beta_{0}\cdot 1 & + & \beta_{1}\cdot 0 & + & 0 & + & \dots & + & 0 & + & \dots & + & \beta_{k}\cdot x_{0,k}\\
-\vdots & = & \vdots & + & 0 & + & \beta_{2}\cdot 1 & + & \dots & + & \vdots & + & \dots & + & \beta_{k}\cdot x_{1,k}\\
-y_{j} & = & \vdots & + & \vdots & + & 0 & + & \dots & + & \vdots & + & \dots & + & \beta_{k}\cdot x_{t,k}\\
-\vdots & = & \vdots & + & \vdots & + & \vdots & + & \dots & + & 0 & + & \dots & + & \vdots\\
+\vdots & = & \vdots & + & \vdots & + & \vdots & + & \dots & + & \vdots & + & \dots & + & \vdots\\
+y_{j+1} & = & \vdots & + & 0 & + & \beta_{2}\cdot 1 & + & \dots & + & \vdots & + & \dots & + & \beta_{k}\cdot x_{t+1,k}\\
+\vdots & = & \vdots & + & \vdots & + & \vdots & + & \dots & + & \vdots & + & \dots & + & \vdots\\
 y_{n \cdot j} & = & \beta_{0}\cdot 1 & + & 0 & + & 0 & + & \dots & + & \beta_{n}\cdot 1 & + & \dots & + & \beta_{k}\cdot x_{n \cdot t,k}
 \end{bmatrix}
 \quad
